[metadata]
name = hwetests
version = 0.9.7
author = Or Shkuri
author_email = orshkuri2000@gmail.com
description = A python package containing two statistical tests for HWE testing: Gibbs Sampling tests and a modified Chi Squared tests that handles ambiguity
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/ExtraFlash/HWE_tests_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True