[metadata]
name = hwetests
version = 1.0.0
author = Or Shkuri
author_email = orshkuri2000@gmail.com
description = A python package containing two statistical tests for HWE testing: Gibbs Sampling tests and a modified Chi Squared tests that handles ambiguity
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/louzounlab/HWE_Tests
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

install_requires =
    numpy>=1.21.2
    scipy>=1.7.1
    matplotlib>=3.4.3
    seaborn>=0.11.2